# Assist

./: .gitignore  CMakeLists.txt  Parser.h  main.cpp
data/: DataGrabber.ipynb  dac_uc_majors.json  dac_ucs.json  dataGrabber.py
data/Assistscrape-master/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
data_structure/: BST.h  BSTNode.h  HashMap.h  HashTable.h  KeyHash.h  Node.h  Queue.h  SinglyLinkedList.h
model/: Course.cpp  Course.h  HashObject.h  Major.cpp  Major.h  University.cpp  University.h
